# project_machine_learn

./: README.md  app.py  pizzas.csv  populate_data.py  pyproject.toml  random_sales_products.csv  testes.ipynb  testes2.ipynb
